# voter-manager

./: .pre-commit-config.yaml  Makefile  pyproject.toml
.github/workflows/: ci.yml
voter/: settings.py  tor_controller.py
voter/apps/likehouse/: constants.py
