[tool.poetry]
name = "voter"
version = "0.1.0"
description = ""
authors = ["Tomas Janicek <tomas.janicek@redampsecurity.com>"]

[tool.poetry.dependencies]
python = "^3.9"
stem = "^1.8.0"

[tool.poetry.dev-dependencies]
isort = "^5.10.0"
black = "^21.10b0"
pylint = "^2.11.1"
flake8 = "^4.0.1"
pre-commit = "^2.15.0"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
